Creacion de la clase Articulos para manejar la tabla Articulos

--- a/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
+++ b/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
@@ -58,8 +58,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\Articulo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -83,7 +87,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Modelos\" />
     <Folder Include="Reportes\" />
     <Folder Include="Vistas\" />
   </ItemGroup>
