--- a/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
+++ b/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Modelos\Articulo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vistas\fMensajes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\fMensajes.Designer.cs">
+      <DependentUpon>fMensajes.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,6 +79,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vistas\fMensajes.resx">
+      <DependentUpon>fMensajes.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -88,7 +97,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Reportes\" />
-    <Folder Include="Vistas\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resursos\IconosMensajes\chat.png" />
+    <Content Include="Resursos\IconosMensajes\error.png" />
+    <Content Include="Resursos\IconosMensajes\exclamation.png" />
+    <Content Include="Resursos\IconosMensajes\information.png" />
+    <Content Include="Resursos\IconosMensajes\question.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
