--- a/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
+++ b/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Modelos\articulo_x_cod_barra.cs" />
     <Compile Include="Modelos\Impuesto.cs" />
     <Compile Include="Modelos\Proveedor.cs" />
+    <Compile Include="Modelos\Rubro.cs" />
+    <Compile Include="Modelos\Tipo_iva.cs" />
+    <Compile Include="Modelos\Unidade_medida.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vistas\fArticulos.cs">
@@ -75,6 +78,12 @@
     </Compile>
     <Compile Include="Vistas\fConfirmar.Designer.cs">
       <DependentUpon>fConfirmar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\fImpuesto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\fImpuesto.Designer.cs">
+      <DependentUpon>fImpuesto.cs</DependentUpon>
     </Compile>
     <Compile Include="Vistas\fMensaje.cs">
       <SubType>Form</SubType>
@@ -99,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\fConfirmar.resx">
       <DependentUpon>fConfirmar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\fImpuesto.resx">
+      <DependentUpon>fImpuesto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\fMensaje.resx">
       <DependentUpon>fMensaje.cs</DependentUpon>
