--- a/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
+++ b/MotoPartesErazo/MotoPartesErazo/MotoPartesErazo.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigGlobal\ClsComun.cs" />
+    <Compile Include="ConfigGlobal\ClsUI.cs" />
     <Compile Include="Datos\DBHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -91,6 +92,12 @@
     <Compile Include="Vistas\fMensaje.Designer.cs">
       <DependentUpon>fMensaje.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\F_Impuesto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\F_Impuesto.Designer.cs">
+      <DependentUpon>F_Impuesto.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\fMensaje.resx">
       <DependentUpon>fMensaje.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\F_Impuesto.resx">
+      <DependentUpon>F_Impuesto.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
